--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -73,8 +73,8 @@
     </Compile>
     <Compile Include="Model\Server.cs" />
     <Compile Include="Model\Messaging.cs" />
-    <Compile Include="Model\cClient.cs" />
-    <Compile Include="Model\IClient.cs" />
+    <Compile Include="Model\ChatClient.cs" />
+    <Compile Include="Model\IChatClient.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
