added the Server:IService class and some little changes Server Implementation is not ready but searching rn

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -98,6 +98,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="ClassDiagramClient.cd" />
     <None Include="Connected Services\Proxy\Client.Proxy.CompositeType.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
