--- a/HostInCmd/App.config
+++ b/HostInCmd/App.config
@@ -8,7 +8,7 @@
       <service name="HostInCmd.Service">
         <endpoint address=""
                   binding="wsDualHttpBinding"
-                  contract="HostInCmd.IClientService">
+                  contract="HostInCmd.IService">
 
         </endpoint>
         <host>
