--- a/Client/App.config
+++ b/Client/App.config
@@ -4,7 +4,19 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
     <system.serviceModel>
-        <bindings />
-        <client />
+        <bindings>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_IService" />
+            </wsDualHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:60901/Service.svc" binding="wsDualHttpBinding"
+                bindingConfiguration="WSDualHttpBinding_IService" contract="Proxy.IService"
+                name="WSDualHttpBinding_IService">
+                <identity>
+                    <userPrincipalName value="VCS\jfrackmann" />
+                </identity>
+            </endpoint>
+        </client>
     </system.serviceModel>
 </configuration>
